<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>net.shibboleth</groupId>
        <artifactId>parent</artifactId>
        <version>4</version>
    </parent>

    <groupId>uk.org.ukfederation</groupId>
    <artifactId>ukf-mda</artifactId>
    <version>0.7.0</version>
    
    <name>UK federation aggregator beans</name>
    <description>
        Collection of beans supporting metadata aggregation for the UK federation,
        based on the Shibboleth metadata aggregator framework.
    </description>

    <properties>
        <!-- none of our own -->
    </properties>

    <dependencies>

        <!-- Compile dependencies -->

        <dependency>
            <groupId>net.shibboleth.metadata</groupId>
            <artifactId>aggregator-pipeline</artifactId>
            <version>0.7.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.shibboleth.utilities</groupId>
            <artifactId>java-support</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>

        <!-- Provided Dependencies -->

        <!-- Runtime dependencies -->

        <!-- Test dependencies -->

        <!-- Managed Dependencies -->

        <dependency>
            <groupId>${xerces.groupId}</groupId>
            <artifactId>xml-apis</artifactId>
        </dependency>
        <dependency>
            <groupId>${xerces.groupId}</groupId>
            <artifactId>xercesImpl</artifactId>
        </dependency>
        <dependency>
            <groupId>${xerces.groupId}</groupId>
            <artifactId>serializer</artifactId>
        </dependency>
        <dependency>
            <groupId>${xmlresolver.groupId}</groupId>
            <artifactId>xml-resolver</artifactId>
        </dependency>
        <dependency>
            <groupId>${xalan.groupId}</groupId>
            <artifactId>xalan</artifactId>
        </dependency>

    </dependencies>

    <build>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgument>-Djava.endorsed.dirs="target/endorsed"</compilerArgument>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-Djava.endorsed.dirs="target/endorsed"</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>target/endorsed</outputDirectory>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>${xerces.groupId}</groupId>
                                    <artifactId>xml-apis</artifactId>
                                    <version>${xerces.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>${xerces.groupId}</groupId>
                                    <artifactId>xercesImpl</artifactId>
                                    <version>${xerces.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>${xerces.groupId}</groupId>
                                    <artifactId>serializer</artifactId>
                                    <version>${xerces.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>${xmlresolver.groupId}</groupId>
                                    <artifactId>xml-resolver</artifactId>
                                    <version>${xmlresolver.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>${xalan.groupId}</groupId>
                                    <artifactId>xalan</artifactId>
                                    <version>${xalan.version}</version>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>

                </executions>
            </plugin>

        </plugins>
        
        <pluginManagement>
            <plugins>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven 
                    build itself. -->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-dependency-plugin</artifactId>
                                        <versionRange>[2.1,)</versionRange>
                                        <goals>
                                            <goal>copy</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <execute />
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <developers>
        <developer>
            <id>iay</id>
            <name>Ian Young</name>
            <organization>EDINA, University of Edinburgh</organization>
            <organizationUrl>http://edina.ac.uk</organizationUrl>
            <timezone>0</timezone>
        </developer>
    </developers>

</project>
